--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -13,5 +13,10 @@
                 <input type="password" ng-model="user.password">
             </label>
         </div>
+        <div class="padding">
+            <p class="text-center">
+                <a href="#/sign-in.html">有密码，去登陆</a>
+            </p>
+        </div>
     </ion-content>
 </ion-view>
