--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -14,11 +14,12 @@
             </label>
         </div>
         <div class="padding">
-            <button class="button button-block " ng-click="signIn(user)">
+            <button class="button button-block sign-btbg color-white" ng-click="signIn(user)">
                 Sign-In
             </button>
-            <p class="text-center">
-                <a href="#/forgot-password">Forgot password</a>
+            <p class=" padding" >
+                <a href="#/sign-up" class=" ">注册账号</a>
+                <a href="#/forgot-password" class=" ">忘记密码</a>
             </p>
         </div>
     </ion-content>
