--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,4 @@
 .text-right{ text-align: right;}
 .sign-btbg{background-color: #ffc900;}
 .color-white{ color: #ffffff; }
+.register a{ color: #333333; text-decoration: none;}
