--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -17,9 +17,9 @@
             <button class="button button-block sign-btbg color-white" ng-click="signIn(user)">
                 Sign-In
             </button>
-            <p class=" padding" >
-                <a href="#/sign-up" class=" ">注册账号</a>
-                <a href="#/forgot-password" class=" ">忘记密码</a>
+            <p class="padding register" >
+                <a href="#/sign-up" class="sign-up">注册账号</a>
+                <a href="#/forgot-password" class="forget">忘记密码</a>
             </p>
         </div>
     </ion-content>
