--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -14,7 +14,7 @@
             </label>
         </div>
         <div class="padding">
-            <button class="button button-block sign-btbg color-white" ng-click="signIn(user)">
+            <button class="button button-block sign-btbg color-white" ng-click="signIn()">
                 Sign-In
             </button>
             <p class="padding register" >
