--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -6,11 +6,11 @@
         <div class="list text-center">
             <label class="item item-input">
                 <span class="input-label"><i class="ion-cloud"></i>账号</span>
-                <input type="text" ng-model="user.username">
+                <input type="text" ng-model="username">
             </label>
             <label class="item item-input">
                 <span class="input-label">密码</span>
-                <input type="password" ng-model="user.password">
+                <input type="password" ng-model="password">
             </label>
         </div>
         <div class="padding">
