--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1,4 +1,6 @@
-<ion-view view-title="WELCOME!" >
+
+<ion-nav-view view-title="WELCOME!" >
+    <ion-nav-bar style="display: none"></ion-nav-bar>
     <ion-content>
         <div class="list text-center" >
             <img src="images/logo.png" style="width: 100px; height: auto">
@@ -23,4 +25,4 @@
             </p>
         </div>
     </ion-content>
-</ion-view>
+</ion-nav-view>
