--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -1,10 +1,6 @@
 
-<ion-view view-title="注册" hid>
-    <ion-nav-bar align-title="center" class="bar-positive">
-        <ion-nav-back-button side="" class="button-clear">
-            <i class="ion-arrow-left-c" ng-click="goBack()"></i>后退
-        </ion-nav-back-button>
-    </ion-nav-bar>
+<ion-view view-title="注册" >
+
 
     <ion-content>
         <div class="list ">
@@ -17,10 +13,7 @@
                 <input type="password" ng-model="password">
             </label>
         </div>
-        <div class="padding">
-            <p class="text-center">
-                <a href="#/sign-in.html">有密码，去登陆</a>
-            </p>
-        </div>
+
     </ion-content>
+
 </ion-view>
