--- a/templates/forgot-password-next.html
+++ b/templates/forgot-password-next.html
@@ -1,8 +1,4 @@
 <ion-view>
-    <ion-header-bar align-title="left" class="bar-positive">
-        <h1 class="title">找回密码</h1>
-    </ion-header-bar>
-
     <ion-content>
 
         <div class="list  padding" style="margin-top: 50px">
@@ -15,7 +11,7 @@
         <div class="padding" style="margin-top: 50px">
             <p class="text-center">
                 <button class="button button-block button-positive" ng-click="signIn(user)">
-                    <a href="#/forgot-password-next">下一步</a>
+                    <a href="">下一步</a>
                 </button>
             </p>
         </div>
