--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1,5 +1,6 @@
 
-<ion-nav-view view-title="WELCOME!" >
+<ion-nav-view name="signin">
+<ion-view view-title="WELCOME!" hide-back-button=true hide-nav-bar=true>
     <ion-content>
         <div class="list text-center" >
             <img src="images/logo.png" style="width: 100px; height: auto">
@@ -24,4 +25,5 @@
             </p>
         </div>
     </ion-content>
+</ion-view>
 </ion-nav-view>
