--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -1,5 +1,7 @@
 
-<ion-view view-title="注册" >
+<ion-nav-view name="signup">
+<ion-view align-title="center" title="注册" hide-nav-bar=false hide-back-button=false>
+
 
 
     <ion-content>
@@ -15,5 +17,5 @@
         </div>
 
     </ion-content>
-
 </ion-view>
+</ion-nav-view>
