--- a/public/templates/sign-in.html
+++ b/public/templates/sign-in.html
@@ -1,7 +1,6 @@
 
-<ion-nav-view name="signin">
-<ion-view view-title="WELCOME!" hide-back-button=true hide-nav-bar=true>
-    <ion-content>
+<ion-view view-title="Sign In" hide-nav-bar=true >
+  <ion-content>
         <div class="list text-center" >
             <img src="images/logo.png" style="width: 100px; height: auto">
         </div>
@@ -26,4 +25,4 @@
         </div>
     </ion-content>
 </ion-view>
-</ion-nav-view>
+</ion-view>
