--- a/public/templates/sign-up.html
+++ b/public/templates/sign-up.html
@@ -1,6 +1,6 @@
 
-<ion-nav-view name="signup">
-<ion-view align-title="center" title="注册" hide-nav-bar=false hide-back-button=false>
+
+<ion-view  view-title="注册" titlealign="center" hide-nav-bar=false hide-back-button=false>
 
 
     <ion-content>
@@ -16,4 +16,3 @@
         </div>
     </ion-content>
 </ion-view>
-</ion-nav-view>
