马上完成前后台联通开发

--- a/www/templates/sign-in.html
+++ b/www/templates/sign-in.html
@@ -7,7 +7,7 @@
         <div class="list text-center">
             <label class="item item-input">
                 <span class="input-label"><i class="icon ion-heart"></i>账号</span>
-                <input type="text" ng-model="user.username">
+                <input type="text" ng-model="user.phone">
             </label>
             <label class="item item-input">
                 <span class="input-label"><i class="icon ion-locked"></i>密码</span>
