--- a/www/templates/forgot-password.html
+++ b/www/templates/forgot-password.html
@@ -1,22 +1,37 @@
-<ion-view>
-
-
+<ion-view view-title="找回密码" titlealign="center" hide-nav-bar=false hide-back-button=false>
     <ion-content>
          <div class="list  padding" style="margin-top: 50px">
              <p>注册时预留的手机号码找回</p>
             <label class="item item-input" >
                 <span class="input-label">手机号码</span>
-                <input type="password" ng-model="user.tel">
+                <input type="tel" ng-model="user.phone">
             </label>
+             <label class="item item-input" >
+                 <span class="input-label">新密码</span>
+                 <input type="password" ng-model="user.password">
+             </label>
+             <label class="item item-input">
+                 <span class="input-label">确认新密码</span>
+                 <input type="password" ng-model="user.password2">
+             </label>
              <div class="yz">
-                  <div class="yzm"></div>
-                  <div class="passcheck">验证码 <input type="text"/></div>
+                 <button class="button button-block" ng-click="sendMessage()">
+                     发送验证码到手机
+                 </button>
+             </div>
+             <div>
+                 <form>
+                     <label>收到的验证码：</label>
+                     <input type="text" placeholder="验证码" style="border: 1px solid #cccccc;display: inline-block">
+                     <span  style="border: 1px solid #cccccc;display: inline-block;width: 50px; height: 35px;line-height: 30px;
+                     margin:0 0 0 10px; text-align: center;" ng-hide="true"  ng-model="time">60s</span>
+                 </form>
              </div>
         </div>
         <div class="padding" style="margin-top: 50px">
             <p class="text-center">
-                <button class="button button-block button-positive" ng-click="signIn(user)">
-                    <a href="#/forgot-password-next" style=" color: #ffffff; text-decoration: none;">下一步</a>
+                <button class="button button-block button-positive" ng-click="forgot-password()">
+                    <a href="#/sign-in" style=" color: #ffffff; text-decoration: none;">提交</a>
                 </button>
             </p>
         </div>
