--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -1,18 +1,21 @@
 
-
 <ion-view  view-title="注册" titlealign="center" hide-nav-bar=false hide-back-button=false>
-
-
     <ion-content>
-        <div class="list ">
+        <div class="list padding ">
             <label class="item item-input">
-                <span class="input-label"><i class="icon ion-android-phone-portrait">手机号</i></span>
+                <span class="input-label">手机号</span>
                 <input type="text" ng-model="username">
             </label>
             <label class="item item-input">
                 <span class="input-label">密码</span>
                 <input type="password" ng-model="password">
             </label>
+            <label class="item item-input">
+                <span class="input-label">确认密码</span>
+                <input type="password" ng-model="password">
+            </label>
+
         </div>
+
     </ion-content>
 </ion-view>
