--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -7,12 +7,16 @@
                 <input type="text" ng-model="username">
             </label>
             <label class="item item-input">
+                <span class="input-label">用户名</span>
+                <input type="password" ng-model="username">
+            </label>
+            <label class="item item-input">
                 <span class="input-label">密码</span>
                 <input type="password" ng-model="password">
             </label>
             <label class="item item-input">
                 <span class="input-label">确认密码</span>
-                <input type="password" ng-model="password">
+                <input type="password" ng-model="password2">
             </label>
 
         </div>
