--- a/www/templates/forgot-password-next.html
+++ b/www/templates/forgot-password-next.html
@@ -4,7 +4,7 @@
         <div class="list  padding" style="margin-top: 50px">
             <p>输入手机收到的验证码</p>
             <label class="item item-input" >
-                <input type="password" ng-model="user.tel">
+                <input type="password" ng-model="user.num">
                 <span class="input-label">验证码</span>
             </label>
         </div>
