--- a/www/templates/forgot-password.html
+++ b/www/templates/forgot-password.html
@@ -8,7 +8,7 @@
             </label>
              <label class="item item-input" >
                  <span class="input-label">新密码</span>
-                 <input type="password" ng-model="user.password">
+                 <input type="password" ng-model="user.password" placeholder="英文字母加数字长度为6到12位">
              </label>
              <label class="item item-input">
                  <span class="input-label">确认新密码</span>
@@ -30,7 +30,7 @@
         </div>
         <div class="padding" style="margin-top: 50px">
             <p class="text-center">
-                <button class="button button-block button-positive" ng-click="forgot-password()">
+                <button class="button button-block button-positive" ng-click="forgotPassword()">
                     <a href="#/sign-in" style=" color: #ffffff; text-decoration: none;">提交</a>
                 </button>
             </p>
