--- a/www/templates/sign-in.html
+++ b/www/templates/sign-in.html
@@ -6,7 +6,7 @@
         </div>
         <div class="list text-center">
             <label class="item item-input">
-                <span class="input-label"><i class="icon ion-heart"></i>账号</span>
+                <span class="input-label"><i class="icon ion-person"></i>账号</span>
                 <input type="text" ng-model="user.phone">
             </label>
             <label class="item item-input">
