--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -4,22 +4,37 @@
         <div class="list padding ">
             <label class="item item-input">
                 <span class="input-label">手机号</span>
-                <input type="text" ng-model="username">
+                <input type="text" ng-model="user.phone"  >
             </label>
             <label class="item item-input">
                 <span class="input-label">用户名</span>
-                <input type="password" ng-model="username">
+                <input type="text" ng-model="user.name" placeholder="英文字母开头长度为6-18位">
             </label>
             <label class="item item-input">
                 <span class="input-label">密码</span>
-                <input type="password" ng-model="password">
+                <input type="password" ng-model="user.password" placeholder="英文字母加数字长度为6到12位">
             </label>
             <label class="item item-input">
                 <span class="input-label">确认密码</span>
-                <input type="password" ng-model="password2">
+                <input type="password" ng-model="user.password2">
             </label>
 
         </div>
+        <div class="padding">
+            <form>
+                <input type="text" placeholder="验证码"  style="display: inline-block;width: 150px ;
+                 height: 45px; line-height: 45x; border: 1px solid #ccc">
+                <button class="button sign-up-check" ng-click="" >
+                    发送验证码到手机
+                </button>
+            </form>
+        </div>
+        <div class="padding" style="margin-top: 50px">
+                <button class="button button-block button-positive" ng-click="signUp()">
+                    <a href="#/sign-in" style=" color: #ffffff; text-decoration: none;">提交</a>
+                </button>
+        </div>
+
 
     </ion-content>
 </ion-view>
