--- a/www/templates/forgot-password.html
+++ b/www/templates/forgot-password.html
@@ -15,7 +15,7 @@
                  <input type="password" ng-model="user.password2">
              </label>
              <div class="yz">
-                 <button class="button button-block" ng-click="sendMessage()">
+                 <button class="button button-block" ng-click="sendMessage()" ng-disabled="isDisabled">
                      发送验证码到手机
                  </button>
              </div>
@@ -23,8 +23,8 @@
                  <form>
                      <label>收到的验证码：</label>
                      <input type="text" placeholder="验证码" style="border: 1px solid #cccccc;display: inline-block">
-                     <span  style="border: 1px solid #cccccc;display: inline-block;width: 50px; height: 35px;line-height: 30px;
-                     margin:0 0 0 10px; text-align: center;" ng-hide="true"  ng-model="time">60s</span>
+                     <input  style="border: 1px solid #cccccc;display: inline-block;width: 50px; height: 35px;line-height: 30px;
+                     margin:0 0 0 10px; text-align: center;" type="text"  value="{{times}}" ng-readonly="isDisabled">
                  </form>
              </div>
         </div>
