所有集成完成

--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -36,7 +36,7 @@
 
         <a class="item item-icon-left" ui-sref="app.menu4" ui-sref-active="active" menu-close>
           <i class="icon mdi mdi-message-processing font-icon-md"></i>
-          Feeds
+          旅烨视闻
           <span class="badge badge-assertive">67</span>
         </a>
 
