--- a/www/templates/app/states/setting.html
+++ b/www/templates/app/states/setting.html
@@ -3,13 +3,24 @@
     <div class="buttons">
       <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
     </div>
-    <h1 class="title">Settings</h1>
+    <h1 class="title">设置</h1>
     <div class="buttons">
       <button class="button button-icon button-clear ion-ios-search"></button>
     </div>
   </ion-header-bar>
   <ion-content class="setting">
-    <ul class="list">
+      <div class="list card">
+
+          <div class="item item-button-right">
+              <span>头像</span>
+            <button  class="button button-clear">
+             <img width="40" height="40" src="img/mike.png">
+            </button>
+          </div>
+</div>
+
+    <ul class="list card">
+
       <li class="item item-toggle">
         HTML5
         <label class="toggle toggle-positive">
