集成联系人,图片选择,文件,sqlite等原生功能

--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -61,3 +61,23 @@
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
+
+<!--幻灯片-->
+<script id="templates/intro.html" type="text/ng-template">
+  <ion-view hide-nav-bar="true" hide-back-button="true">
+    <ion-slide-box does-continue="true" auto-play="true" slide-interval="1000" show-pager="true" >
+    <ion-slide>
+      <img src="img/adam.jpg" class="box">
+    </ion-slide>
+    <ion-slide>
+      <img src="img/ben.png" class="box" width="100%">
+    </ion-slide>
+    <ion-slide>
+      <img src="img/bg.jpeg" width="100%" class="box">
+    </ion-slide>
+    <ion-slide>
+      <img src="img/ionic.png" width="100%" class="box">
+    </ion-slide>
+  </ion-slide-box>
+  </ion-view>
+</script>
