--- a/www/templates/forgot-password.html
+++ b/www/templates/forgot-password.html
@@ -1,39 +1,29 @@
-<ion-view view-title="找回密码" titlealign="center" hide-nav-bar=false hide-back-button=false>
+<ion-view view-title="找回密码" titlealign="center"  style="background: url(img/sign-in-bg.png)" hide-nav-bar=false hide-back-button=false>
     <ion-content>
-        <div class="list  padding" style="margin-top: 50px">
-            <p>注册时预留的手机号码找回</p>
+        <div class="list  padding" style="margin-top: 20px">
+            <p style="color: white">注册时预留的手机号码找回</p>
             <label class="item item-input" >
-                <span class="input-label">手机号码</span>
-                <input type="tel" ng-model="user.phone">
+                <span class="icon ion-android-phone-portrait"></span>
+                <input type="tel" ng-model="user.phone"  placeholder="请输入手机号">
             </label>
+
             <label class="item item-input" >
-                <span class="input-label">新密码</span>
+                <span class="icon ion-locked"></span>
                 <input type="password" ng-model="user.password" placeholder="英文字母加数字长度为6到12位">
             </label>
             <label class="item item-input">
-                <span class="input-label">确认新密码</span>
-                <input type="password" ng-model="user.password2">
+                <span class="icon ion-locked"></span>
+                <input type="password" ng-model="user.password2"  placeholder="请确认密码">
             </label>
-            <div class="yz">
-                <button class="button button-block" ng-click="sendMessage()">
-                    发送验证码到手机
-                </button>
-            </div>
-            <div>
-                <form>
-                    <label>收到的验证码：</label>
-                    <input type="text" placeholder="验证码" style="border: 1px solid #cccccc;display: inline-block">
-                     <span  style="border: 1px solid #cccccc;display: inline-block;width: 50px; height: 35px;line-height: 30px;
-                     margin:0 0 0 10px; text-align: center;" ng-hide="true"  ng-model="time">60s</span>
-                </form>
-            </div>
         </div>
-        <div class="padding" style="margin-top: 50px">
-            <p class="text-center">
-                <button class="button button-block button-positive" ng-click="forgotPassword()">
-                    <a href="#/sign-in" style=" color: #ffffff; text-decoration: none;">提交</a>
-                </button>
-            </p>
+
+        <div class="padding send-identifying">
+            <input class="input-label " type="text" ng-model="user.check"  placeholder="验证码">
+            <button class="button button-balanced">发送验证码</button>
+        </div>
+
+        <div class="loginButton padding">
+            <button class="button ion-unlocked button-block  button-balanced" ng-click="forgotPassword()" style="margin-bottom: 0;color:white;">提交</button>
         </div>
     </ion-content>
 </ion-view>
