--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -1,18 +1,35 @@
 
+<ion-view  view-title="注册" titlealign="center"  style="background: url(img/sign-in-bg.png)" hide-nav-bar=false hide-back-button=false>
+    <ion-content padding="true" class="background-inherit">
+        <div class="list background-inherit">
+            <div class="list padding border-radius" style="">
+                <label class="item item-input only-border-bottom">
+                    <span class="icon ion-android-phone-portrait " ></span>
+                    <input type="text" ng-model="user.phone"  placeholder="请输入手机号">
+                </label>
+                <label class="item item-input only-border-bottom ">
+                    <span class="icon ion-person"></span>
+                    <input type="text" ng-model="user.name" placeholder="请输入用户名">
+                </label>
+                <label class="item item-input">
+                    <span class="icon ion-locked"></span>
+                    <input type="password" ng-model="user.password" placeholder="请输入密码">
+                </label>
+                <label class="item item-input">
+                    <span class="icon ion-locked"></span>
+                    <input type="password" ng-model="user.password2" placeholder="请确认密码">
+                </label>
+            </div>
 
-<ion-view  view-title="注册" titlealign="center" hide-nav-bar=false hide-back-button=false>
+            <div class="padding send-identifying">
+                    <input class="input-label" type="text" ng-model="user.check"  placeholder="验证码">
+                    <button class="button button-balanced">发送验证码</button>
+            </div>
 
+            <div class="loginButton padding">
+                <button class="button ion-unlocked button-block  button-balanced" ng-click="signUp()" style="margin-bottom: 0;color:white;">提交</button>
+            </div>
 
-    <ion-content>
-        <div class="list ">
-            <label class="item item-input">
-                <span class="input-label"><i class="icon ion-android-phone-portrait">手机号</i></span>
-                <input type="text" ng-model="username">
-            </label>
-            <label class="item item-input">
-                <span class="input-label">密码</span>
-                <input type="password" ng-model="password">
-            </label>
         </div>
     </ion-content>
 </ion-view>
