--- a/www/templates/sign-in.html
+++ b/www/templates/sign-in.html
@@ -1,5 +1,5 @@
 
-<ion-view view-title="Sign In" hide-nav-bar=true  style="background: url(img/sign-in-bg.png)">
+<ion-view view-title="sign in" hide-nav-bar=true  style="background: url(img/sign-in-bg.png)">
   <ion-content padding="true" class="background-inherit">
       <div class="list background-inherit" >
           <div  class="item item-image background-inherit" style="    border: none;margin-top: 40px;margin-bottom: 40px;">
