--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -67,7 +67,7 @@
   <ion-view hide-nav-bar="true" hide-back-button="true">
     <ion-slide-box does-continue="true" auto-play="true" slide-interval="1000" show-pager="true" >
     <ion-slide>
-      <img src="img/adam.jpg" class="box">
+      <img src="img/adam.jpg" class="box" width="100%">
     </ion-slide>
     <ion-slide>
       <img src="img/ben.png" class="box" width="100%">
