--- a/www/templates/app/states/menu2.html
+++ b/www/templates/app/states/menu2.html
@@ -1,71 +1,15 @@
-<ion-view hide-nav-bar="true" hide-back-button="true">
-  <ion-header-bar class="bar-royal" align-title="left">
-    <div class="buttons">
-      <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
-    </div>
-    <h1 class="title">Profile</h1>
-    <div class="buttons">
-      <button class="button button-icon button-clear ion-android-more-vertical"></button>
-    </div>
-  </ion-header-bar>
-  <ion-content class="profile">
+<ion-tabs class="tabs-icon-top tabs-color-active-balanced ">
 
-    <div class="information-profile div-img" vertical layout style="background-image: url('http://data.hdwallpapers.im/cowgirl_beauty.jpg')">
-      <div flex></div>
-      <div class="text-profile padding">
-        <h3 class="text-center no-margin">Taylor Swift</h3>
-        <p class="text-center no-margin"> <i class="mdi mdi-map-marker energized"></i> PMB 412 Hendersonville, TN 37075 USA</p>
-      </div>
-    </div>
-
-    <div class="navigation-profile" horizontal layout>
-      <div flex class="tab-navigation text-center border active">
-        <div>42</div>
-        <div>Stories</div>
-      </div>
-      <div flex class="tab-navigation text-center border">
-        <div>517</div>
-        <div>Followers</div>
-      </div>
-      <div flex class="tab-navigation text-center border">
-        <div>284</div>
-        <div>Following</div>
-      </div>
-    </div>
-
-    <div class="list">
-
-      <a class="item item-thumbnail-left">
-        <img src="http://m.f9.img.vnecdn.net/2010/11/05/taylor-swift-speak-now-1-1345735512_480x0.jpg">
-        <h2>Weezer</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
-      </a>
-
-      <a class="item item-thumbnail-left">
-        <img src="https://nmheslss.files.wordpress.com/2013/07/wh.jpg">
-        <h2>Smashing Pumpkins</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
-      </a>
-
-      <a class="item item-thumbnail-left">
-        <img src="http://www2.pictures.zimbio.com/mp/6145C-36PNKl.jpg">
-        <h2>Nirvana</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
-      </a>
-
-      <a class="item item-thumbnail-left">
-        <img src="http://vignette3.wikia.nocookie.net/taylor-swift/images/a/a5/Taylor_come.jpeg/revision/latest?cb=20111224220636">
-        <h2>Beastie Boys</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
-      </a>
-
-      <a class="item item-thumbnail-left">
-        <img src="http://4.bp.blogspot.com/-RO2T0ofJqxc/UIVlcdtPQ6I/AAAAAAAADas/xtjKH26jHhA/s400/Red-taylor-swift-32284207-500-500_zps38263481.jpg">
-        <h2>Green Day</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
-      </a>
-
-    </div>
-
-  </ion-content>
-</ion-view>
+  <ion-tab title="消息" icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline" ui-sref="tab.message">
+    <ion-nav-view animation="slide-left-right" name="tab-message"></ion-nav-view>
+  </ion-tab>
+  <ion-tab title="通讯录" icon-on="ion-ios-people" icon-off="ion-ios-people-outline" ui-sref="tab.friends">
+    <ion-nav-view animation="slide-left-right" name="tab-friends"></ion-nav-view>
+  </ion-tab>
+  <ion-tab title="发现" icon-on="ion-ios-paperplane" icon-off="ion-ios-paperplane-outline" ui-sref="tab.find">
+    <ion-nav-view animation="slide-left-right" name="tab-find"></ion-nav-view>
+  </ion-tab>
+  <ion-tab title="我" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" ui-sref="tab.find">
+    <ion-nav-view animation="slide-left-right" name="tab-setting"></ion-nav-view>
+  </ion-tab>
+</ion-tabs>
