--- a/www/templates/app/states/tab-message.html
+++ b/www/templates/app/states/tab-message.html
@@ -1,22 +1,14 @@
-<ion-header-bar align-title="left" class="bar-dark">
-    <div class="h1 title">微信(16)</div>
+<ion-header-bar class="bar-royal" align-title="left">
     <div class="buttons">
-        <button class="button no-animation button-icon icon ion-android-search">
-        </button>
-        <button class="button no-animation button-icon icon ion-android-add">
-        </button>
+        <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+    </div>
+    <h1 class="title">message</h1>
+    <div class="buttons">
+        <button class="button button-icon button-clear ion-ios-search"></button>
     </div>
 </ion-header-bar>
 <ion-view>
-    <ion-content on-swipe-left="onSwipeLeft()">
-        <ion-list rj-close-back-drop>
-            <ion-item class="item-avatar" ng-class="{'rj-item-top': message.isTop}" on-hold="popupMessageOpthins(message)" rj-hold-active ng-repeat="message in messages | orderBy:['isTop', 'lastMessage.timeFrome1970']:true" ng-click="messageDetils(message)">
-                <img ng-src="{{message.pic}}">
-                <span class="rj-sm-red-icon" ng-show="message.showHints"><p ng-bind="message.noReadMessages"></p></span>
-                <h2 ng-bind="message.name"></h2>
-                <p class="rj-list-p" ng-bind="message.lastMessage.content"></p>
-                <span class="rj-push-right" ng-bind="message.lastMessage.time"></span>
-            </ion-item>
-        </ion-list>
+    <ion-content>
+        <h1>消息页面</h1>
     </ion-content>
 </ion-view>
