--- a/www/templates/app/states/menu2.html
+++ b/www/templates/app/states/menu2.html
@@ -1,15 +1,16 @@
-<ion-tabs class="tabs-icon-top tabs-color-active-balanced ">
 
-  <ion-tab title="消息" icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline" ui-sref="tab.message">
+
+<ion-tabs class="tabs-icon-top tabs-color-active-balanced ">
+  <ion-tab title="消息" icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline" ui-sref="app.menu2.message" >
     <ion-nav-view animation="slide-left-right" name="tab-message"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="通讯录" icon-on="ion-ios-people" icon-off="ion-ios-people-outline" ui-sref="tab.friends">
+  <ion-tab title="通讯录" icon-on="ion-ios-people" icon-off="ion-ios-people-outline" ui-sref="app.menu2.friends">
     <ion-nav-view animation="slide-left-right" name="tab-friends"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="发现" icon-on="ion-ios-paperplane" icon-off="ion-ios-paperplane-outline" ui-sref="tab.find">
+  <ion-tab title="发现" icon-on="ion-ios-paperplane" icon-off="ion-ios-paperplane-outline" ui-sref="app.menu2.find">
     <ion-nav-view animation="slide-left-right" name="tab-find"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="我" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" ui-sref="tab.find">
+  <ion-tab title="我" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" ui-sref="app.menu2.setting">
     <ion-nav-view animation="slide-left-right" name="tab-setting"></ion-nav-view>
   </ion-tab>
 </ion-tabs>
