--- a/www/templates/app/states/tab-friends.html
+++ b/www/templates/app/states/tab-friends.html
@@ -1,19 +1,15 @@
-<ion-view hide-nav-bar="true" hide-back-button="true">
-    <ion-header-bar class="bar-assertive" align-title="left">
-        <div class="buttons">
-            <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
-        </div>
-        <h1 class="title">Profile</h1>
-        <div class="buttons">
-            <button class="button button-icon button-clear ion-android-more-vertical"></button>
-        </div>
-    </ion-header-bar>
-    <ion-content class="profile">
+<ion-header-bar class="bar-royal" align-title="left">
+    <div class="buttons">
+        <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+    </div>
+    <h1 class="title">message</h1>
+    <div class="buttons">
+        <button class="button button-icon button-clear ion-ios-search"></button>
+    </div>
+</ion-header-bar>
 
-        <img src="http://data.hdwallpapers.im/cowgirl_beauty.jpg" alt="" class="img-responsive"/>
-
-        <h3 class="text-center">Taylor Swift</h3>
-        <h1>FRIENDS</h1>
-
+<ion-view>
+    <ion-content >
+        <h1>通讯录页面</h1>
     </ion-content>
 </ion-view>
