--- a/www/templates/app/states/tab-message.html
+++ b/www/templates/app/states/tab-message.html
@@ -1,13 +1,14 @@
-<ion-header-bar class="bar-royal" align-title="left">
-    <div class="buttons">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
-    </div>
-    <h1 class="title">message</h1>
-    <div class="buttons">
-        <button class="button button-icon button-clear ion-ios-search"></button>
-    </div>
-</ion-header-bar>
-<ion-view>
+
+<ion-view hide-nav-bar="true">
+    <ion-header-bar class="bar-balanced" align-title="left">
+        <div class="buttons">
+            <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+        </div>
+        <h1 class="title">message</h1>
+        <div class="buttons">
+            <button class="button button-icon button-clear ion-ios-search"></button>
+        </div>
+    </ion-header-bar>
     <ion-content>
         <h1>消息页面</h1>
     </ion-content>
