--- a/www/templates/app/states/tab-friends.html
+++ b/www/templates/app/states/tab-friends.html
@@ -1,14 +1,13 @@
-<ion-header-bar class="bar-royal" align-title="left">
+<ion-header-bar class="bar-balanced" align-title="left">
     <div class="buttons">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
     </div>
-    <h1 class="title">message</h1>
+    <h1 class="title">friends</h1>
     <div class="buttons">
         <button class="button button-icon button-clear ion-ios-search"></button>
     </div>
 </ion-header-bar>
-
-<ion-view>
+<ion-view hide-nav-bar="true">
     <ion-content >
         <h1>通讯录页面</h1>
     </ion-content>
