--- a/www/templates/app/states/tab-setting.html
+++ b/www/templates/app/states/tab-setting.html
@@ -1,15 +1,14 @@
-<ion-header-bar align-title="left" class="bar-dark">
-    <div class="h1 title">微信(16)</div>
+<ion-header-bar class="bar-balanced" align-title="left">
     <div class="buttons">
-        <button class="button no-animation button-icon icon ion-android-search">
-        </button>
-        <button class="button no-animation button-icon icon ion-android-add">
-        </button>
+        <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+    </div>
+    <h1 class="title">setting</h1>
+    <div class="buttons">
+        <button class="button button-icon button-clear ion-ios-search"></button>
     </div>
 </ion-header-bar>
 
-
-<ion-view>
+<ion-view hide-nav-bar="true">
     <ion-content>
         <h1>设置页面</h1>
     </ion-content>
