在集成旅烨CMS模板

--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -28,10 +28,10 @@
             <span class="badge badge-royal">7</span>
         </a>
 
-        <a class="item item-icon-left" ui-sref="app.menu3" ui-sref-active="active" menu-close>
+        <a class="item item-icon-left" ui-sref="app.templateyun" ui-sref-active="active" menu-close>
           <i class="icon mdi mdi-bell-ring font-icon-md"></i>
           云模板
-            <span class="badge badge-assertive">67</span>
+            <span class="badge badge-assertive">新增10</span>
         </a>
 
         <a class="item item-icon-left" ui-sref="app.menu4" ui-sref-active="active" menu-close>
