在集成旅烨CMS模板

--- a/www/templates/templateyun/index.html
+++ b/www/templates/templateyun/index.html
@@ -14,6 +14,6 @@
 <!--pages-->
 <div ui-view=""></div>
 <!--footbar-->
-<div ng-include="footbar" ng-init="myData=customer.footbar"></div>
+<div ng-include="footbar" ></div>
     </ion-content>
 </ion-view>
