--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -11,7 +11,8 @@
         </div>
         <div class="padding text-center">
           <div class="avatar">
-            <img ng-click="changeHeader()" style="border-radius: 200px;width:200px;height:200px;" src=" {{ userHeader ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}"  alt="" class="img-responsive"/>
+            <img ng-click="changeHeader()" style="border-radius: 200px;width:200px;height:200px;"
+                 src=" {{ userHeader ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}"  alt="" class="img-responsive" />
           </div>
           <h4 class="no-margin">Taylor Swift</h4>
 
