将微信界面放入app中,尚未完成

--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -23,7 +23,7 @@
 
 
 
-        <a class="item item-icon-left" ui-sref="app.menu2" ui-sref-active="active" menu-close>
+        <a class="item item-icon-left" ui-sref="chat.message" ui-sref-active="active" menu-close>
           <i class="icon mdi mdi-account-circle font-icon-md"></i>
             消息
             <span class="badge badge-royal">7</span>
