--- a/www/templates/chat/tab-workspace.html
+++ b/www/templates/chat/tab-workspace.html
@@ -2,13 +2,15 @@
     <div class="buttons">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
     </div>
-    <h1 class="title">friends</h1>
+    <h1 class="title">工作室</h1>
     <div class="buttons">
         <button class="button button-icon button-clear ion-ios-search"></button>
     </div>
 </ion-header-bar>
+
+
 <ion-view hide-nav-bar="true">
-    <ion-content >
-        <h1>通讯录页面</h1>
+    <ion-content on-swipe-right="onSwipeRight()" >
+        <h1>工作室</h1>
     </ion-content>
 </ion-view>
