将微信界面放入app中,尚未完成

--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -43,7 +43,7 @@
 
         <a class="item item-icon-left" ui-sref="app.menu6" ui-sref-active="active" menu-close>
           <i class="icon mdi mdi-instagram font-icon-md"></i>
-          Photo
+          作品集
           <span class="badge badge-positive">18</span>
         </a>
 
