--- a/www/templates/templateyun/index.html
+++ b/www/templates/templateyun/index.html
@@ -4,7 +4,7 @@
     <ion-content>
         <ion-header-bar align-title="center" class="bar-positive">
                 <div class="buttons" class="button-clear">
-                <button class="button-clear" style="color:white"><i ng-click="$ionicGoBack()" class="button-icon ion-arrow-left-c ion-left">返回</i></button>
+                <button class="button-clear" ng-click="$ionicGoBack()" style="color:white"><i  class="button-icon ion-arrow-left-c ion-left">返回</i></button>
                 </div>
             <h1 class="title ">旅烨模板云</h1>
 
