--- a/www/templates/chat/tab-message.html
+++ b/www/templates/chat/tab-message.html
@@ -1,23 +1,26 @@
-
-<ion-view>
-    <ion-header-bar align-title="left" class="bar-dark">
-        <div class="h1 title">微信(16)</div>
+<ion-view hide-nav-bar="true" hide-back-button="true">
+    <ion-header-bar class="bar-royal" align-title="left">
         <div class="buttons">
-            <button class="button no-animation button-icon icon ion-android-search">
-            </button>
-            <button class="button no-animation button-icon icon ion-android-add">
-            </button>
+            <button class="button button-icon button-clear ion-navicon"  ng-click="$ionicGoBack()"></button>
+        </div>
+        <h1 class="title">消息</h1>
+        <div class="buttons">
+            <button class="button button-icon button-clear ion-ios-search"></button>
         </div>
     </ion-header-bar>
-    <ion-content on-swipe-left="onSwipeLeft()">
-        <ion-list rj-close-back-drop>
-            <ion-item class="item-avatar" ng-class="{'rj-item-top': message.isTop}" on-hold="popupMessageOpthins(message)" rj-hold-active ng-repeat="message in messages | orderBy:['isTop', 'lastMessage.timeFrome1970']:true" ng-click="messageDetils(message)">
-                <img ng-src="{{message.pic}}">
-                <span class="rj-sm-red-icon" ng-show="message.showHints"><p ng-bind="message.noReadMessages"></p></span>
-                <h2 ng-bind="message.name"></h2>
-                <p class="rj-list-p" ng-bind="message.lastMessage.content"></p>
-                <span class="rj-push-right" ng-bind="message.lastMessage.time"></span>
-            </ion-item>
-        </ion-list>
+    <ion-content>
+        ssssssssssssssssssssssssssssssssssssssssssssss
+        <div class="row" ion-row-height="" >
+
+            <div class="col-25" ng-repeat="demo in demos">
+                <div class="card">
+                    <img   src="{{demo.preview}}" height="99px" ui-sref="templateIndex({index:demo.index,config:demo.config})">
+                    <div class="item item-text-wrap">
+                        {{demo.title}}
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
