微信聊天尚未完成,差不多了,还有friends界面,app的文件组织需要重新排列,以组件的形式排列app,而不能以mvc的形式排列app

--- a/www/templates/chat/tabs.html
+++ b/www/templates/chat/tabs.html
@@ -1,11 +1,11 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-balanced">
-    <ion-tab title="微信" icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline" ui-sref="app.chat.message">
+    <ion-tab title="微信" icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline" ui-sref="tab.message">
         <ion-nav-view animation="slide-left-right" ></ion-nav-view>
     </ion-tab>
-    <ion-tab title="通讯录" icon-on="ion-ios-people" icon-off="ion-ios-people-outline" ui-sref="app.chat.friends">
+    <ion-tab title="通讯录" icon-on="ion-ios-people" icon-off="ion-ios-people-outline" ui-sref="app.tab.friends">
         <ion-nav-view animation="slide-left-right" ></ion-nav-view>
     </ion-tab>
-    <ion-tab title="工作室" icon-on="ion-ios-paperplane" icon-off="ion-ios-paperplane-outline" ui-sref="app.chat.workspace">
+    <ion-tab title="工作室" icon-on="ion-ios-paperplane" icon-off="ion-ios-paperplane-outline" ui-sref="app.tab.workspace">
         <ion-nav-view animation="slide-left-right" ></ion-nav-view>
     </ion-tab>
 
