微信聊天完成,将一套商用CMS模板放入系统中

--- a/www/templates/app/states/menu4.html
+++ b/www/templates/app/states/menu4.html
@@ -3,7 +3,7 @@
     <div class="buttons">
       <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
     </div>
-    <h1 class="title">Feeds</h1>
+    <h1 class="title">旅烨视闻</h1>
     <div class="buttons">
       <button class="button button-icon button-clear ion-ios-search"></button>
     </div>
