--- a/www/templates/app/states/menu6.html
+++ b/www/templates/app/states/menu6.html
@@ -3,7 +3,7 @@
     <div class="buttons">
       <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
     </div>
-    <h1 class="title">Photo</h1>
+    <h1 class="title">作品集</h1>
     <div class="buttons">
       <button class="button button-icon button-clear ion-ios-search"></button>
     </div>
