--- a/www/templates/chat/tabs.html
+++ b/www/templates/chat/tabs.html
@@ -1,12 +1,12 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-balanced">
-    <ion-tab title="微信" icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline" ui-sref="tab.message">
-        <ion-nav-view animation="slide-left-right" ></ion-nav-view>
+    <ion-tab title="微信" icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline" ui-sref="app.tab.message">
+        <ion-nav-view animation="slide-left-right" name="tab-message" ></ion-nav-view>
     </ion-tab>
     <ion-tab title="通讯录" icon-on="ion-ios-people" icon-off="ion-ios-people-outline" ui-sref="app.tab.friends">
-        <ion-nav-view animation="slide-left-right" ></ion-nav-view>
+        <ion-nav-view animation="slide-left-right" name="tab-friends" ></ion-nav-view>
     </ion-tab>
     <ion-tab title="工作室" icon-on="ion-ios-paperplane" icon-off="ion-ios-paperplane-outline" ui-sref="app.tab.workspace">
-        <ion-nav-view animation="slide-left-right" ></ion-nav-view>
+        <ion-nav-view animation="slide-left-right" name="tab-workspace" ></ion-nav-view>
     </ion-tab>
 
 </ion-tabs>
