今天晚上早点休息,不写代码了.明天工作的主要问题: 1.将摄像头功能完善好,并且将popu提示改为原生应用的alert提示 2.将web浏览器调用云模板模块完善,并且替换app的logo等

--- a/www/templates/app/states/templateyun.html
+++ b/www/templates/app/states/templateyun.html
@@ -11,29 +11,13 @@
   <ion-content>
 
 
-      <div class="row">
-        <div class="col col-75">.col.col-75</div>
-        <div class="col">.col</div>
-      </div>
-      <div class="row">
-        <div class="col col-75">.col.col-75</div>
-        <div class="col">.col</div>
-      </div>
-      <div class="row">
-        <div class="col col-75">.col.col-75</div>
-        <div class="col">.col</div>
-      </div>
+        <!--<a ui-sref="templateIndex">绿叶</a>-->
 
-
-
-      <div class="col col-50" ng-repeat="demo in demos">
-
-        <img   src="{{demo.preview}}" height="99px" ng-click="viewTemplate(demo)">
-        <div class="item item-text-wrap">
-          {{demo.title}}
-        </div>
-      </div>
-
+      <a click="window.open(‘http://shsx.alvye.cn’, '_system')" >旅烨实习生</a>
+      <a click="window.open('http://www.baidu.com','_blank')" >旅烨实习生</a>
+      <a click="window.open('http://www.baidu.com','_blank', 'location=no'" >旅烨实习生</a>
+      <a ng-click="open()" >旅烨实习生</a>
+      <a ng-click="open()" >旅烨实习生</a>
 
   </ion-content>
 </ion-view>
