--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3790,6 +3790,7 @@ a.subdued {
   .action-sheet-open .action-sheet-backdrop {
     pointer-events: auto; }
 
+  /*
 .platform-android .action-sheet-backdrop.active {
   background-color: rgba(0, 0, 0, 0.2); }
 
@@ -3820,6 +3821,7 @@ a.subdued {
 .platform-android .action-sheet-has-icons .button {
   padding-left: 56px; }
 
+*/
 .backdrop {
   position: fixed;
   top: 0;
