--- a/www/css/wechat.css
+++ b/www/css/wechat.css
@@ -4024,7 +4024,7 @@ a.subdued:last-child {
     pointer-events: none; }
 .action-sheet-open .action-sheet-backdrop {
     pointer-events: auto; }
-
+/*
 .platform-android .action-sheet-backdrop.active {
     background-color: rgba(0, 0, 0, 0.2); }
 
