--- a/www/templates/sign-in.html
+++ b/www/templates/sign-in.html
@@ -11,7 +11,7 @@
           <div class="list padding" style="">
               <label class="item item-input only-border-bottom">
                   <span class="icon ion-android-phone-portrait icon-left"></span>
-                  <input type="text" placeholder="请输入手机号" ng-model="user.phone">
+                  <input type="number" placeholder="请输入手机号" ng-model="user.phone">
               </label>
 
               <label class="item item-input only-border-bottom ">
