--- a/www/templates/sign-in.html
+++ b/www/templates/sign-in.html
@@ -3,10 +3,8 @@
 
   <ion-content padding="true" class="background-inherit">
       <div class="list background-inherit" >
-          <div  class="item item-image background-inherit" style="    border: none;margin-top: 40px;margin-bottom: 40px;">
-              <div class="col-50 col-offset-25">
-                  <img class="" src="images/logo.jpg" style="border-radius:200px">
-              </div>
+          <div class="item item-image background-inherit" style="border: none;margin-top: 40px;margin-bottom: 40px;margin-left: 25%;margin-right: 25%;">
+              <img class="" src="images/icon.png" style="border-radius:200px;display: block;">
           </div>
           <div class="list padding" style="">
               <label class="item item-input only-border-bottom">
