es7 asyn重写mongodb的数据查询,更加优美

--- a/www/templates/chat/message-detail.html
+++ b/www/templates/chat/message-detail.html
@@ -46,7 +46,7 @@
             </button>
         </div>
         <div class="rj-send-button" ng-hide="!send_content || send_content === ''">
-            <p>发送</p>
+            <p ng-click="sendMessage()">发送</p>
         </div>
     </div>
 </ion-footer-bar>
