--- a/www/templates/forgot-password.html
+++ b/www/templates/forgot-password.html
@@ -9,17 +9,17 @@
 
             <label class="item item-input" >
                 <span class="icon ion-locked"></span>
-                <input type="password" ng-model="user.password" placeholder="英文字母加数字长度为6到12位">
+                <input type="password" ng-model="user.password" placeholder="输入新密码，英文字母加数字长度为6到12位">
             </label>
-            <label class="item item-input">
-                <span class="icon ion-locked"></span>
-                <input type="password" ng-model="user.password2"  placeholder="请确认密码">
-            </label>
+            <!--<label class="item item-input">-->
+                <!--<span class="icon ion-locked"></span>-->
+                <!--<input type="password" ng-model="user.password2"  placeholder="请确认密码">-->
+            <!--</label>-->
         </div>
 
         <div class="padding send-identifying">
-            <input class="input-label " type="text" ng-model="user.check"  placeholder="验证码">
-            <button class="button button-balanced">发送验证码</button>
+            <input class="input-label " type="text" style="display: inline-block;height: 43px;" ng-model="user.check"  placeholder="验证码">
+            <button class="button button-balanced" style="display: inline-block; ">发送验证码</button>
         </div>
 
         <div class="loginButton padding">
