--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -22,19 +22,20 @@
                            <span  class="icon ion-heart"></span>
                             <span style="color:#111" >职业类型</span>
                         </div>
-                        <select ng-model="job.id" convert-to-number>
-                            <option selected="" value="0">网页设计师</option>
+                        <select ng-model="job.id" convert-to-number >
+                            <option  value="0" ng-repeat="x in jobs">网页设计师</option>
                             <option value="1">前端工程师</option>
                             <option value="2">PHP工程师</option>
+                            <option value="3">实习生</option>
+                            <option value="4">讲师</option>
+                            <option value="5">管理人员</option>
+                            <option value="6">其他</option>
                         </select>
                         {{ job }}
                     </div>
                 </div>
 
 
-                    <h1 ng-repeat="x in jobs">
-                        {{x}}
-                    </h1>
 
             </div>
 
