--- a/www/templates/chat/message-detail.html
+++ b/www/templates/chat/message-detail.html
@@ -9,8 +9,7 @@
         <button class="button button-icon icon ion-person"></button>
     </div>
 </ion-header-bar>
-<ion-content class="rj-stable-content" delegate-handle="messageDetailsScroll" id="message-detail-content">
-	<ion-refresher pulling-text="..." on-refresh="doRefresh()" pulling-icon=""></ion-refresher>
+<ion-content class="rj-stable-content"  id="message-detail-content">
 
     <div ng-repeat="item in messages">
     	<p class="rj-message-time" ng-bind="item.time" ng-if="false"></p>
@@ -20,13 +19,13 @@
             <p class="rj-message" ng-bind="item.content"></p>
         </div>
         <div class="rj-message-wrap" ng-if="item.isFromeMe">
-            <img src="img/me.png" class="rj-head-pic-right">
+            <img src="{{user.headpic}}" class="rj-head-pic-right">
             <span class="rj-triangle-right"></span>
             <p class="rj-message-right" ng-bind="item.content"></p>
         </div>
     </div>
 </ion-content>
-<ion-footer-bar align-title="left" class="bar-light" resize-foot-bar>
+<ion-footer-bar align-title="left" class="bar-light" >
     <!-- <div class="buttons rj-footer-buttons-left">
         <button class="button button-icon icon ion-ios-mic-outline">
         </button>
