--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -14,9 +14,9 @@
             <img ng-click="changeHeader()" style="border-radius: 200px;width:200px;height:200px;"
                  src=" {{ user.headpic ||'templates/app/img/200_taylor_swift_spl811605_.jpg'}}"  alt="" class="img-responsive" />
           </div>
-          <h4 class="no-margin">Taylor Swift</h4>
+          <h4 class="no-margin">{{user.name}}</h4>
 
-          <p class="no-margin">PMB 412 Hendersonville, TN 37075 USA</p>
+          <p class="no-margin">网页设计师</p>
         </div>
       </div>
       <div flex class="list no-margin" style="overflow-y: scroll">
