--- a/www/templates/app/menu.html
+++ b/www/templates/app/menu.html
@@ -16,7 +16,7 @@
           </div>
           <h4 class="no-margin">{{user.name}}</h4>
 
-          <p class="no-margin">网页设计师</p>
+          <p class="no-margin">{{user.job}}</p>
         </div>
       </div>
       <div flex class="list no-margin" style="overflow-y: scroll">
