--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -9,32 +9,24 @@
                 </label>
                 <label class="item item-input only-border-bottom ">
                     <span class="icon ion-person"></span>
-                    <input type="text" ng-model="user.name" placeholder="用户名必须以字母开头，长度为6~18位">
+                    <input type="text" ng-model="user.name" placeholder="请输入用户名">
                 </label>
                 <label class="item item-input">
                     <span class="icon ion-locked"></span>
                     <input type="password" ng-model="user.password" placeholder="密码必须是6到12位的数字加字母组成">
                 </label>
-
-                           <div class="list">
+                <div class="list">
                 <div class="item item-input item-select">
                     <div class="input-label">
                         <span  class="icon ion-heart"></span>
                         <span style="color:#111" >职业类型</span>
                     </div>
-                    <select ng-model="job.id" convert-to-number >
-                        <option  value="0" ng-repeat="x in jobs">网页设计师</option>
-                        <option value="1">前端工程师</option>
-                        <option value="2">PHP工程师</option>
-                        <option value="3">实习生</option>
-                        <option value="4">讲师</option>
-                        <option value="5">管理人员</option>
-                        <option value="6">其他</option>
+                    <select ng-model="user.job" convert-to-number >
+                        <option  ng-repeat="x in jobs">{{x}}</option>
                     </select>
-                    {{ job }}
+
                 </div>
             </div>
-
         </div>
 
 
