--- a/www/templates/forgot-password.html
+++ b/www/templates/forgot-password.html
@@ -1,4 +1,4 @@
-<ion-view view-title="找回密码" titlealign="center"  style="background: url(img/sign-in-bg.png)" hide-nav-bar=false hide-back-button=false>
+<ion-view view-title="找回密码" titlealign="center"  style="background-color: #0a9dc7"  hide-nav-bar=false hide-back-button=false>
     <ion-content>
         <div class="list  padding" style="margin-top: 20px">
             <p style="color: white">注册时预留的手机号码找回</p>
