--- a/www/templates/app/states/menu6.html
+++ b/www/templates/app/states/menu6.html
@@ -1,3 +1,4 @@
+
 <ion-view hide-nav-bar="true" hide-back-button="true">
   <ion-header-bar class="bar-dark" align-title="left">
     <div class="buttons">
@@ -8,25 +9,38 @@
       <button class="button button-icon button-clear ion-ios-search"></button>
     </div>
   </ion-header-bar>
+
+
+
   <ion-content class="photo">
+    <div id="rightDisplay" ng-if="bigImage" class="popover-backdrop"
+         style="position: fixed;top:0;left: 0;z-index: 10; width: 100%;height: 100%;background:rgba(0,0,0, 0.8);"
+         ng-click="hideBigImage()">
 
+      <img class="img-responsive"
+           style="position: absolute;top: 20%;left: 5%;z-index: 10;display: block;
+        height: 40%;width: 90%; border: 1px solid #ccc; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);"
+           src="{{Url}}"/>
+    </div>
     <div class="list">
-
       <div class="item item-divider">
         Candy Bars <br/>
-        <span><i class="ion ion-filing"></i> 19 photos </span>
+        <span><i class="ion ion-filing"></i> 222222photos </span>
       </div>
 
       <div class="album padding-5" horizontal layout>
         <div flex class="padding-5">
-          <img src="http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg" alt="" class="img-responsive"/>
+          <img src="http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg')"/>
         </div>
         <div flex class="padding-5">
-          <img src="http://nhatrangholiday.net/images/thumb/m_nhatrangholiday-net-12.jpg" alt="" class="img-responsive"/>
+          <img src="http://nhatrangholiday.net/images/thumb/m_nhatrangholiday-net-12.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://nhatrangholiday.net/images/thumb/m_nhatrangholiday-net-12.jpg')"/>
 
         </div>
         <div flex class="padding-5">
-          <img src="http://t07.deviantart.net/UE-5RrKHQ2a_Krv5DOkK8mIUfeI=/300x200/filters:fixed_height(100,100):origin()/pre06/6846/th/pre/i/2012/299/2/c/herbst_06_by_anschi71-d5j0260.jpg" alt="" class="img-responsive"/>
+          <img src="http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg')"/>
 
         </div>
       </div>
@@ -38,14 +52,17 @@
 
       <div class="album padding-5" horizontal layout>
         <div flex class="padding-5">
-          <img src="https://www.constancehotels.com/media/1970/halaveli-maldives-water-villa-6.jpg?anchor=center&mode=crop&width=300&height=200&rnd=130555045620000000" alt="" class="img-responsive"/>
+          <img src="https://www.constancehotels.com/media/1970/halaveli-maldives-water-villa-6.jpg?anchor=center&mode=crop&width=300&height=200&rnd=130555045620000000" alt="" class="img-responsive"
+               ng-click="shouBigImage('https://www.constancehotels.com/media/1970/halaveli-maldives-water-villa-6.jpg?anchor=center&mode=300&height=200&rnd=130555045620000000')"/>
         </div>
         <div flex class="padding-5">
-          <img src="http://media.travelbag.co.uk/content/Ao/images/MVMLEHTL009Aer_13_web2.jpg" alt="" class="img-responsive"/>
+          <img src="http://media.travelbag.co.uk/content/Ao/images/MVMLEHTL009Aer_13_web2.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://nhatrangholiday.net/images/thumb/m_nhatrangholiday-net-12.jpg')"/>
 
         </div>
         <div flex class="padding-5">
-          <img src="http://r-ec.bstatic.com/images/hotel/max300/389/38967451.jpg" alt="" class="img-responsive"/>
+          <img src="http://media.travelbag.co.uk/content/Ao/images/MVMLEHTL009Aer_13_web2.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://media.travelbag.co.uk/content/Ao/images/MVMLEHTL009Aer_13_web2.jpg')"/>
 
         </div>
       </div>
@@ -57,14 +74,17 @@
 
       <div class="album padding-5" horizontal layout>
         <div flex class="padding-5">
-          <img src="http://cleditorial.s3.amazonaws.com/article/cruising101/qa/top-caribbean-excursions/caribbean-excursions-stingray-city.jpg" alt="" class="img-responsive"/>
+          <img src="http://media.travelbag.co.uk/content/Ao/images/MVMLEHTL009Aer_13_web2.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://media.travelbag.co.uk/content/Ao/images/MVMLEHTL009Aer_13_web2.jpg')"/>
         </div>
         <div flex class="padding-5">
-          <img src="http://img.holidayplace.co.uk/gallery/content/105868/sandals-resorts-in-key-caribbean-holiday-destinations-reap-the-rewards-of-earthcheck-programme.jpg" alt="" class="img-responsive"/>
+          <img src="http://img.holidayplace.co.uk/gallery/content/105868/sandals-resorts-in-key-caribbean-holiday-destinations-reap-the-rewards-of-earthcheck-programme.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://img.holidayplace.co.uk/gallery/content/105868/sandals-resorts-in-key-caribbean-holiday-destinations-reap-the-rewards-of-earthcheck-programme.jpg')"/>
 
         </div>
         <div flex class="padding-5">
-          <img src="http://www.labspaces.net/images/news/Nwhi_-_French_Frigate_Shoals_reef_-_many_fish.jpg" alt="" class="img-responsive"/>
+          <img src="http://www.labspaces.net/images/news/Nwhi_-_French_Frigate_Shoals_reef_-_many_fish.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://www.labspaces.net/images/news/Nwhi_-_French_Frigate_Shoals_reef_-_many_fish.jpg')"/>
 
         </div>
       </div>
@@ -76,19 +96,24 @@
 
       <div class="album padding-5" horizontal layout>
         <div flex class="padding-5">
-          <img src="http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg" alt="" class="img-responsive"/>
+          <img src="http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg')"/>
         </div>
         <div flex class="padding-5">
-          <img src="http://nhatrangholiday.net/images/thumb/m_nhatrangholiday-net-12.jpg" alt="" class="img-responsive"/>
+          <img src="http://nhatrangholiday.net/images/thumb/m_nhatrangholiday-net-12.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://nhatrangholiday.net/images/thumb/m_nhatrangholiday-net-12.jpg')"/>
 
         </div>
         <div flex class="padding-5">
-          <img src="http://t07.deviantart.net/UE-5RrKHQ2a_Krv5DOkK8mIUfeI=/300x200/filters:fixed_height(100,100):origin()/pre06/6846/th/pre/i/2012/299/2/c/herbst_06_by_anschi71-d5j0260.jpg" alt="" class="img-responsive"/>
+          <img src="http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg" alt="" class="img-responsive"
+               ng-click="shouBigImage('http://hoangdiep.vn/files/image/jpg/thamkhao/vuonthien.jpg')"/>
 
         </div>
       </div>
 
     </div>
+
+
 
 
   </ion-content>
