--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -1,5 +1,5 @@
 
-<ion-view  view-title="注册" titlealign="center"  style="background: url(img/sign-in-bg.png)" hide-nav-bar=false hide-back-button=false>
+<ion-view  view-title="注册" titlealign="center"  style="background-color: #0a9dc7"  hide-nav-bar=false hide-back-button=false>
     <ion-content padding="true" class="background-inherit">
         <div class="list background-inherit">
             <div class="list padding border-radius" style="">
